2003-12-15  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: add hashes for the ascii
	representations of @-commands and a function for ascii accents.
	Give style functions the style @-command stack.
	New function duplicate_state to be used when special text is expanded 
	within a normal context.
	substitute_line accepts a $state argument.

2003-12-10  Patrice Dumas  <dumas@centre-cired.fr>

	* INTRODUCTION, NEWS, README, TODO, texi2html.1.in, doc/TODO: bring
	those files a bit more up-to-date and correct typos.
	* doc/IDEA: removed, the content was obsolete or in TODO.
	* texi2html.pl: add no-... options for the options needing it.
	echo less options with --help.

2003-12-10  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, TODO: add hashes for unicode encodings
	of accented letter and characters.
	A function cross_manual_links can expand node name according to the 
	proposal I made on the texinfo-pretest list (currently unused).

	* examples/utf8.init: add an init file for outputting of utf8 encoded
	characters.

2003-12-05  Derek Price  <derek@ximbiot.com>

	* texi2html.pl: Suggest `--help' rather than `-help' in error messages.

2003-12-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: @sp without arg is considered to be @sp 1
	* Tests/formatting/formatting.texi: add test for @sp
	* TODO: begin a list of UTF8 characters corresponding with accented
	texinfo letters, in order to implement cross manual references scheme
	described on the bug-texinfo mailing list and maybe output utf8.

2003-12-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't collect @copying lines in the first pass
	but in the second.
	Use the same mechanism to collect @copying, @documentdescription
	and @titlepage lines.

2003-12-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: new option -macro-expand which generates a file 
	with expanded macros and @include.